--- a/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # PyTorch packages
-    "torch==2.7.1+cu128; platform_machine != 'ppc64le' and platform_machine != 's390x'",
+    "torch==2.9.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
 
     # Triton here is a dependency of torch, and is just being
     # explicitly re-declared so that the index to pull it from can be
@@ -18,14 +18,14 @@ dependencies = [
     #
     # Since it's a dependency of torch, I've also added same platform
     # exclusion marker to omit for ppc64le.
-    "triton==3.3.1; platform_machine != 'ppc64le' and platform_machine != 's390x'",
+    "triton==3.5.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
 
     # TrustyAI packages
     # More information available at:
     #   - https://pypi.org/project/trustyai/
     #   - https://github.com/trustyai-explainability/trustyai-explainability-python/blob/main/requirements.txt
-    "transformers~=4.57.3",
-    "datasets~=4.4.1",
+    "transformers~=5.0.0",
+    "datasets~=4.5.0",
     "accelerate~=1.12.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     "trustyai~=0.6.3",
 
@@ -76,11 +76,4 @@ override-dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch-cuda" }
-triton = { index = "pytorch-cuda" }
 odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
-
-[[tool.uv.index]]
-name = "pytorch-cuda"
-url = "https://download.pytorch.org/whl/cu128"
-explicit = true
