--- a/runtimes/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "tf2onnx~=1.16.1",
 
     # TensorFlow packages
-    "tensorflow[and-cuda]~=2.20.0",
+    "tensorflow~=2.20.0",
     "tensorboard~=2.20.0",
 
     # Datascience and useful extensions
@@ -24,15 +24,15 @@ dependencies = [
     "odh-notebooks-meta-runtime-elyra-deps",
 
     # Base packages
-    "setuptools~=80.9.0",
     "wheel~=0.46.3",
+    "setuptools~=80.9.0",
 ]
 
 [tool.uv]
 
 override-dependencies = [
     # tf2onnx has pinned protobuf version, that causes conflict with other packages
-    "protobuf==6.31.1",
+    "protobuf==6.33.5",
     "keras~=3.13.2"
 ]
 
