feat(copr): introduce tooling for Copr-based EL9 package rebuilds with dependency resolution
- Added a CLI tool for rebuilding Fedora SRPMs on Copr targeting EL9.
- Implemented automatic dependency resolution and wave-based build ordering.
- Integrated `aipcc.sh` with Copr rebuilds to handle HDF5 1.14.x installation for h5py compatibility.
- Added dry-run mode for plan evaluation before build submission.
- Validated YAML manifests to define package configuration and dependencies.
- Enhanced post-install verification in base image builds for missing shared libraries.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,23 +14,20 @@ dev = [
     "pre-commit",
     "pyright",
     "ruff",
-
     "pytest",
     "allure-pytest",
     "pytest-subtests",
-
     "pyfakefs",
     "pydantic",
     "requests",
-
     "pyyaml",
     "ruamel-yaml",
-
     "testcontainers",
     "docker",
     "podman",
     "kubernetes",
     "openshift-python-wrapper",
+    "koji>=1.35.3",
 ]
 
 [tool.uv]
@@ -62,14 +59,14 @@ reportUnnecessaryTypeIgnoreComment = "error"
 reportPossiblyUnboundVariable = "warning"
 reportOptionalMemberAccess = "none"
 reportOptionalSubscript = "none"
-include = ["ci/", "tests/"]
+include = ["ci/", "tests/", "base-images/"]
 ignore = [ ]
 pythonVersion = "3.14"
 pythonPlatform = "Linux"
 
 # https://docs.astral.sh/ruff/configuration
 [tool.ruff]
-include = ["pyproject.toml", "ci/**/*.py", "ntb/**/*.py", "tests/**/*.py"]
+include = ["pyproject.toml", "ci/**/*.py", "ntb/**/*.py", "tests/**/*.py", "base-images/**/*.py"]
 exclude = [ ]
 target-version = "py314"
 line-length = 120
