--- a/base-images/copr/packages.yaml
+++ b/base-images/copr/packages.yaml
@@ -1,6 +1,16 @@
 copr_project: opendatahub/rhelai-el9
 koji_tag: f44
 
+chroots:
+  - centos-stream-9-x86_64
+  - centos-stream-9-aarch64
+
+# Extra packages for the mock buildroot.
+# EL9 ships autoconf 2.69 by default, but many Fedora SRPMs (including HDF5)
+# need autoconf >= 2.71.  autoconf-latest provides 2.71 on EL9.
+chroot_packages:
+  - autoconf-latest
+
 packages:
   - name: libaec
     nvr: libaec-1.1.4-3.fc43
