feat(copr): update chroots and configure autoconf for EL9 builds
- Replaced CentOS Stream 9 chroots with EPEL 9 chroots for broader architecture support (x86_64, aarch64, ppc64le, s390x).
- Added autoconf 2.72 rebuild to resolve HDF5 dependency on autoconf >= 2.71 in Copr build environment.
- Cleaned up `chroot_packages` configuration and clarified buildroot setup in `packages.yaml`.

This is an important finding. Just adding `autoconf-latest` to `chroot_packages` won't work because it installs `/usr/bin/autoreconf-2.71` alongside the default `/usr/bin/autoreconf` (2.69) -- the build still finds the old one.

There's a cleaner solution than PATH hacks or spec patching: **rebuild the standard Fedora `autoconf` package for EL9 and add it to our Copr repo**. Fedora's `autoconf` package installs the standard `/usr/bin/autoreconf` (at version 2.72+), and since 2.72 > 2.69, the Copr-built autoconf would replace the system one in the mock buildroot for all subsequent builds. No PATH overrides, no spec modifications.

Copr automatically makes a project's own built packages available as build dependencies for later builds. So:
- Wave 0: build `autoconf` (+ `libaec`)
- Wave 1: build `hdf5` -- mock installs our autoconf 2.72 from the Copr repo, `/usr/bin/autoreconf` is now 2.72, and `AC_PREREQ([2.71])` passes

Let me look up the autoconf NVR in the f43 tag and update the manifest.

[2 tools called]

The Koji web UI is blocking automated access. Let me query the Koji API directly using our existing Python infrastructure.

[2 tools called]

Autoconf 2.72 is available in f43. Now let me also verify it provides the standard `/usr/bin/autoreconf` (not a versioned variant like RHEL's `autoconf-latest`).

[1 tool called]

The Fedora `autoconf-2.72-7.fc43` package provides the standard `autoconf` capability (and also `autoconf-latest` and `autoconf272` as virtual provides). This confirms it would replace the system autoconf 2.69 in the buildroot.

Let me verify HDF5 actually has `auto

--- a/base-images/copr/packages.yaml
+++ b/base-images/copr/packages.yaml
@@ -1,17 +1,24 @@
 copr_project: opendatahub/rhelai-el9
 koji_tag: f44
 
+# https://copr.fedorainfracloud.org/coprs/jdanek/rhelai-el9/edit/
 chroots:
-  - centos-stream-9-x86_64
-  - centos-stream-9-aarch64
+  - epel-9-x86_64
+  - epel-9-aarch64
+  - epel-9-ppc64le
+  - epel-9-s390x
 
 # Extra packages for the mock buildroot.
-# EL9 ships autoconf 2.69 by default, but many Fedora SRPMs (including HDF5)
-# need autoconf >= 2.71.  autoconf-latest provides 2.71 on EL9.
-chroot_packages:
-  - autoconf-latest
+chroot_packages: []
 
 packages:
+  - name: autoconf
+    nvr: autoconf-2.72-7.fc43
+    note: >-
+      EL9 ships autoconf 2.69 but Fedora SRPMs (including HDF5) need >= 2.71.
+      Rebuilding the standard Fedora autoconf replaces the system version in the
+      Copr buildroot (2.72 > 2.69), so /usr/bin/autoreconf becomes 2.72.
+      Packages that need it pull it in transitively via automake -> autoconf.
   - name: libaec
     nvr: libaec-1.1.4-3.fc43
     note: "szip compression library required by HDF5"
