refactor(copr): replace `rpmbuild_without` with `build_timeout` for HDF5 test handling
- Switched from `rpmbuild_without` to `build_timeout` in the manifest and chroot configuration to address long-running HDF5 `%check` tests.
- Updated `copr_client.py` to support setting `--timeout` during builds and removed support for `--rpmbuild-without`.
- Enhanced rebuild workflow to leverage `build_timeout` in submitting waves and dry-run output.
- Updated documentation to reflect migration from `rpmbuild_without` to `build_timeout`.

All done. Here's a summary of what the spec file analysis revealed and what changed:

**Key finding from `hdf5.spec`**: The `%check` section (line 349) is **unconditional** -- no `%bcond_without check`. And `copr-cli edit-chroot` doesn't support `--rpmbuild-without` anyway (the man page only lists `--packages`, `--repos`, `--isolation`). So the `rpmbuild_without` approach was broken at two levels.

**What changed:**

- **Removed `rpmbuild_without`** from `Manifest` model, `CoprClient.configure_chroot`, `rebuild.py`, and `packages.yaml`. Removed the 4 associated tests.

- **Added `build_timeout`** -- an optional integer field in the manifest, passed through as `copr-cli build --timeout <seconds>`. Set to `36000` (10 hours) in `packages.yaml` to accommodate HDF5's MPI test suite. The spec itself sets `HDF5_ALARM_SECONDS=8000` (line 372) and notes that `t_pmulti_dset` hangs on some architectures.

- **Updated `spec.md`** R10 to describe the timeout approach instead of `rpmbuild_without`.

- **31 tests pass**, no lint errors.

If even 10 hours isn't enough (because `t_pmulti_dset` hangs rather than being slow), the fallback would be to patch the SRPM to make `%check` conditional or remove the MPI tests. But the timeout approach should be tried first.

--- a/base-images/copr/packages.yaml
+++ b/base-images/copr/packages.yaml
@@ -11,10 +11,10 @@ chroots:
 # Extra packages for the mock buildroot.
 chroot_packages: []
 
-# Skip %check -- we're rebuilding known-good Fedora SRPMs and the test suites
-# (especially HDF5's MPI tests) exceed Copr's build timeout.
-rpmbuild_without:
-  - check
+# Build timeout in seconds.  Copr's default is ~5h (18000s).
+# HDF5's %check runs serial + MPI parallel tests which can take several hours;
+# the MPI test t_pmulti_dset is known to hang on some architectures.
+build_timeout: 36000  # 10 hours
 
 packages:
   - name: autoconf
