feat(copr): add JSON schema for package manifest validation
- Replaced unused `copr_project` and `koji_tag` fields in `packages.yaml` with a reference to a new JSON schema (`manifest_schema.json`).
- Added `manifest_schema.json` to define structure, validation rules, and required fields for package manifests.
- Updated comments to reference the manifest schema for declarative validation.

--- a/base-images/copr/packages.yaml
+++ b/base-images/copr/packages.yaml
@@ -1,5 +1,4 @@
-copr_project: opendatahub/rhelai-el9
-koji_tag: f44
+# yaml-language-server: $schema=./manifest_schema.json
 
 # https://copr.fedorainfracloud.org/coprs/jdanek/rhelai-el9/edit/
 chroots:
