--- a/base-images/copr/packages.yaml
+++ b/base-images/copr/packages.yaml
@@ -1,13 +1,17 @@
 # yaml-language-server: $schema=./manifest_schema.json
 
-# https://copr.fedorainfracloud.org/coprs/jdanek/rhelai-el9/edit/
+# https://copr.fedorainfracloud.org/coprs/aaiet-notebooks/rhelai-el9/
+copr_project: aaiet-notebooks/rhelai-el9
+koji_tag: f43
+
+# https://copr.fedorainfracloud.org/coprs/aaiet-notebooks/rhelai-el9/edit/
 chroots:
   - epel-9-x86_64
   - epel-9-aarch64
   - epel-9-ppc64le
   - epel-9-s390x
 
-# Extra packages for the mock buildroot.
+# Extra packages for the mock buildroot
 chroot_packages: []
 
 # Build timeout in seconds.  Copr's default is ~5h (18000s).
