--- a/base-images/cuda/12.9/ubi9-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/12.9/ubi9-python-3.12/Dockerfile.cuda
@@ -159,6 +159,10 @@ COPY --chmod=664 --chown=1001:0 base-images/utils/pip.conf.in /opt/app-root/pip.
 COPY --chmod=664 --chown=1001:0 base-images/utils/uv.toml.in /opt/app-root/uv.toml
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
+if [ -z "${INDEX_URL}" ]; then
+  echo "ERROR: INDEX_URL build arg is required" >&2
+  exit 1
+fi
 sed -i "s|@INDEX_URL@|${INDEX_URL}|g" /opt/app-root/pip.conf
 sed -i "s|@INDEX_URL@|${INDEX_URL}|g" /opt/app-root/uv.toml
 EOF
