--- a/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
@@ -109,10 +109,18 @@ sed -i "s|@INDEX_URL@|${INDEX_URL}|g" /opt/app-root/pip.conf
 sed -i "s|@INDEX_URL@|${INDEX_URL}|g" /opt/app-root/uv.toml
 EOF
 
-ENV PIP_CONFIG_FILE=/opt/app-root/pip.conf
-ENV PIP_NO_CACHE_DIR=off
-ENV UV_CONFIG_FILE=/opt/app-root/uv.toml
-ENV UV_NO_CACHE=true
+# Python and virtual env settings
+ENV VIRTUAL_ENV=${APP_ROOT} \
+    PIP_CONFIG_FILE=/opt/app-root/pip.conf \
+    UV_CONFIG_FILE=/opt/app-root/uv.toml \
+    PIP_NO_CACHE_DIR=off \
+    UV_NO_CACHE=true \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONIOENCODING=utf-8 \
+    LANG=en_US.UTF-8 \
+    LC_ALL=en_US.UTF-8 \
+    PS1="(app-root) \w\$ "
 ### END AIPCC pip and uv config files
 
 # Restore user workspace
