--- a/.tekton/odh-base-image-cpu-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-cpu-py312-ubi9-pull-request.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-comment: ^/kfbuild\s+(all|odh\-base\-image\-cpu\-py312\-ubi9|base\-images/cpu/ubi9\-python\-3\.12)
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" && ( "base-images/utils/**".pathChanged() || "base-images/cpu/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cpu-py312-ubi9-pull-request.yaml".pathChanged() )
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" && ( "base-images/utils/**".pathChanged() || "base-images/cpu/ubi9-python-3.12/**".pathChanged() || "base-images/build-args/cpu.conf".pathChanged() || ".tekton/odh-base-image-cpu-py312-ubi9-pull-request.yaml".pathChanged() )
       && body.repository.full_name == "opendatahub-io/notebooks"
   creationTimestamp: null
   labels:
@@ -32,6 +32,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: base-images/cpu/ubi9-python-3.12/Dockerfile.cpu
+  - name: build-args-file
+    value: base-images/build-args/cpu.conf
   - name: path-context
     value: .
   - name: build-platforms
