--- a/.tekton/odh-base-image-cuda-13-0-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-cuda-13-0-py312-c9s-pull-request.yaml
@@ -13,7 +13,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: '3'
     pipelinesascode.tekton.dev/on-comment: ^/kfbuild\s+(all|odh\-base\-image\-cuda\-py312\-c9s|base\-images/cuda/13\.0/c9s\-python\-3\.12)
     pipelinesascode.tekton.dev/on-cel-expression: |
-      event == "pull_request" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/cuda/13.0/c9s-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cuda-13-0-py312-c9s-pull-request.yaml".pathChanged() )
+      event == "pull_request" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/cuda/13.0/c9s-python-3.12/**".pathChanged() || "base-images/build-args/cuda13.0.conf".pathChanged() || ".tekton/odh-base-image-cuda-13-0-py312-c9s-pull-request.yaml".pathChanged() )
       && body.repository.full_name == "opendatahub-io/notebooks"
   labels:
     appstudio.openshift.io/application: opendatahub-release
@@ -39,6 +39,8 @@ spec:
     - linux-d160-m2xlarge/arm64
   - name: dockerfile
     value: base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
+  - name: build-args-file
+    value: base-images/build-args/cuda13.0.conf
   - name: path-context
     value: .
   # Added taskRunSpecs to increase compute resources
