--- a/.tekton/odh-base-image-cuda-13-0-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-13-0-py312-c9s-push.yaml
@@ -7,7 +7,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/cuda/13.0/c9s-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cuda-13-0-py312-c9s-push.yaml".pathChanged() )
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/cuda/13.0/c9s-python-3.12/**".pathChanged() || "base-images/build-args/cuda13.0.conf".pathChanged() || ".tekton/odh-base-image-cuda-13-0-py312-c9s-push.yaml".pathChanged() )
   labels:
     appstudio.openshift.io/application: opendatahub-release
     appstudio.openshift.io/component: odh-base-image-cuda-py312-c9s
@@ -24,6 +24,8 @@ spec:
     value: quay.io/opendatahub/odh-base-image-cuda-py312-c9s:{{revision}}
   - name: dockerfile
     value: base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
+  - name: build-args-file
+    value: base-images/build-args/cuda13.0.conf
   - name: build-platforms
     value:
     - linux/x86_64
