--- a/.tekton/odh-base-image-cuda-12-9-py312-ubi9-push.yaml
+++ b/.tekton/odh-base-image-cuda-12-9-py312-ubi9-push.yaml
@@ -35,6 +35,31 @@ spec:
     value:
     - '{{target_branch}}-{{revision}}'
     - v12.9
+  taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: clair-scan
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: ecosystem-cert-preflight-checks
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
   pipelineRef:
     name: multiarch-push-pipeline
   taskRunTemplate:
