--- a/.tekton/odh-base-image-cuda-13-0-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-13-0-py312-c9s-push.yaml
@@ -34,6 +34,31 @@ spec:
     value:
     - '{{target_branch}}-{{revision}}'
     - v13.0
+  taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: clair-scan
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: ecosystem-cert-preflight-checks
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
   pipelineRef:
     name: multiarch-push-pipeline
   taskRunTemplate:
