--- a/.tekton/odh-base-image-rocm-6-4-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-c9s-push.yaml
@@ -31,6 +31,31 @@ spec:
     value:
     - '{{target_branch}}-{{revision}}'
     - v6.4
+  taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: clair-scan
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: ecosystem-cert-preflight-checks
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
   pipelineRef:
     name: singlearch-push-pipeline
   taskRunTemplate:
