--- a/.tekton/odh-base-image-rocm-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-py312-c9s-pull-request.yaml
@@ -40,6 +40,31 @@ spec:
     value: base-images/rocm/6.2/c9s-python-3.12/Dockerfile.rocm
   - name: path-context
     value: .
+  taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: clair-scan
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: ecosystem-cert-preflight-checks
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
   pipelineRef:
     name: multiarch-pull-request-pipeline
   taskRunTemplate:
