--- a/.tekton/odh-base-image-rocm-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-py312-ubi9-pull-request.yaml
@@ -42,6 +42,14 @@ spec:
     value: .
   # Added taskRunSpecs to increase compute resources
   taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
     - pipelineTaskName: clair-scan
       computeResources:
         requests:
