NO-JIRA: chore(base-images): remove singlearch-push-pipeline.yaml and use multiarch- everywhere (#2961)

--- a/.tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml
@@ -60,7 +60,7 @@ spec:
           cpu: '8'
           memory: 32Gi
   pipelineRef:
-    name: singlearch-push-pipeline
+    name: multiarch-push-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-rocm-py312-ubi9-poc
   workspaces:
