--- a/.tekton/odh-base-image-cpu-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-cpu-py312-ubi9-pull-request.yaml
@@ -22,6 +22,8 @@ spec:
   timeouts:
     pipeline: 6h
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -66,7 +68,7 @@ spec:
           cpu: '8'
           memory: 32Gi
   pipelineRef:
-    name: multiarch-pull-request-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cpu-py312-ubi9
   workspaces:
