--- a/.tekton/odh-base-image-rocm-6-4-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-c9s-push.yaml
@@ -17,6 +17,8 @@ metadata:
   namespace: open-data-hub-tenant
 spec:
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -59,7 +61,7 @@ spec:
           cpu: '8'
           memory: 32Gi
   pipelineRef:
-    name: multiarch-push-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-rocm-py312-c9s-poc
   workspaces:
