--- a/.tekton/odh-base-image-rocm-6-4-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-ubi9-pull-request.yaml
@@ -25,6 +25,8 @@ spec:
   timeouts:
     pipeline: 6h
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -71,7 +73,7 @@ spec:
           memory: 32Gi
 
   pipelineRef:
-    name: multiarch-pull-request-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-rocm-py312-ubi9-poc
   workspaces:
