--- a/.tekton/odh-workbench-rstudio-minimal-cpu-py312-rhel9-pull-request.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cpu-py312-rhel9-pull-request.yaml
@@ -27,6 +27,8 @@ spec:
   timeouts:
     pipeline: 6h
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -45,7 +47,7 @@ spec:
   - name: build-args-file
     value: rstudio/rhel9-python-3.12/build-args/cpu.conf
   pipelineRef:
-    name: multiarch-pull-request-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-workbench-rstudio-minimal-cpu-py312-rhel9
   workspaces:
