--- a/.tekton/odh-workbench-rstudio-minimal-cuda-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cuda-py312-c9s-pull-request.yaml
@@ -25,6 +25,8 @@ spec:
   timeouts:
     pipeline: 6h
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -43,7 +45,7 @@ spec:
   - name: build-args-file
     value: rstudio/c9s-python-3.12/build-args/cuda.conf
   pipelineRef:
-    name: multiarch-pull-request-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-workbench-rstudio-minimal-cuda-py312-c9s
   workspaces:
