--- a/.tekton/odh-workbench-rstudio-minimal-cuda-py312-rhel9-pull-request.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cuda-py312-rhel9-pull-request.yaml
@@ -27,6 +27,8 @@ spec:
   timeouts:
     pipeline: 6h
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -63,7 +65,7 @@ spec:
           cpu: '8'
           memory: 32Gi
   pipelineRef:
-    name: multiarch-pull-request-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-workbench-rstudio-minimal-cuda-py312-rhel9
   workspaces:
