--- a/.tekton/odh-workbench-rstudio-minimal-cuda-py312-rhel9-push.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cuda-py312-rhel9-push.yaml
@@ -22,6 +22,8 @@ spec:
   timeouts:
     pipeline: 8h
   params:
+  - name: event-type
+    value: '{{event_type}}'
   - name: git-url
     value: '{{source_url}}'
   - name: revision
@@ -39,7 +41,7 @@ spec:
     - '{{target_branch}}-{{revision}}'
     - 3.4_ea2-v1.42
   pipelineRef:
-    name: multiarch-push-pipeline
+    name: multiarch-combined-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-workbench-rstudio-minimal-cuda-py312-rhel9
   workspaces:
