fixup set type to string

--- a/.tekton/multiarch-combined-pipeline.yaml
+++ b/.tekton/multiarch-combined-pipeline.yaml
@@ -69,6 +69,7 @@ spec:
   - default: "false"
     description: Enable cache proxy configuration
     name: enable-cache-proxy
+    type: string
   - default: []
     description: Array of --build-arg values ("arg=value" strings) for buildah
     name: build-args
