--- a/jupyter/pytorch/ubi9-python-3.12/build-args/cuda.conf
+++ b/jupyter/pytorch/ubi9-python-3.12/build-args/cuda.conf
@@ -1,5 +1,5 @@
 INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.4-EA1/cuda12.9-ubi9/simple/
 # TODO(RHAIENG-3071): Add CPU index as fallback for packages not available in CUDA/ROCm indexes
 CPU_INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.4-EA1/cpu-ubi9/simple/
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.9
+BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:on-pr-f4a48a43f77cd46bae97d9c7de10b871ad9bb889
 PYLOCK_FLAVOR=cuda
