--- a/.tekton/notebooks-group-test.yaml
+++ b/.tekton/notebooks-group-test.yaml
@@ -44,7 +44,7 @@ spec:
   - name: git-auth
     secret:
       secretName: '{{ git_auth_secret }}'
-  - name: shared-workspace
+  - name: shared-data
     volumeClaimTemplate:
       spec:
         accessModes:
